--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,18 @@
   margin: 0%;
   padding: 0%;
   box-sizing: border-box;
+  color: #ffffff;
 }
 
 body {
   overflow: hidden;
+}
+
+#info {
+	position: absolute;
+	top: 0px;
+	width: 100%;
+	padding: 10px;
+	box-sizing: border-box;
+	text-align: center;
 }
